# OPTCG_ai

./: .dockerignore  .env.example  .gitignore  README.md  check_models.py  fix_env.py  game_log.txt  game_log_don.txt  idea.txt  implementation_plan.md  main.py  project_spec.md  pyproject.toml  test_agent.py
agents/: knowledge_agent.py  rewoo_agent.py
agents/gameplay/: random_agent.py  rule_based_agent.py  strategy_agent.py
agents/interfaces/: game_agent.py
app/: api.py  schemas.py
app/services/: guardrails.py  middleware.py  rule_loader.py  search.py
data/: check_for_updates.py  config_group_id.json  embed_loader.py  embed_rules.py  embedding_provider.py  fetch_cards.py  fetch_group_id.py  query_cards.py  search_engine.py
data/chroma_db_gemini/: chroma.sqlite3
data/clean_json/: cards_17658.json  cards_17659.json  cards_17660.json  cards_17661.json  cards_17675.json  cards_17687.json  cards_17698.json  cards_17699.json  cards_22890.json  cards_22930.json  cards_22934.json  cards_22956.json  cards_22957.json  cards_23024.json  cards_23213.json  cards_23232.json  cards_23243.json  cards_23250.json  cards_23272.json  cards_23297.json  cards_23333.json  cards_23348.json  cards_23349.json  cards_23368.json  cards_23387.json  cards_23424.json  cards_23462.json  (+40 more)
docker/: Dockerfile  docker-compose.yml
docs/: azure_setup_guide.md
engine/: state.py
scripts/: parse_game_log.py  simulate_turn.py  simulation_runner.py  test_loader.py  tournament_runner.py
tests/: test_azure_integration.py  test_guardrails_unit.py  test_middleware_integration.py  test_search.py
(+106 files in other folders)
