[project]
name = "optcg-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.1.0",
    "langchain-huggingface>=1.2.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
]
